@@ -70,9 +70,16 @@ DiskManagerFileInfo
 		 * @param type	one of ST_LINEAR or ST_COMPACT
 		 */
 	
-	public boolean
-	setStorageType(
-		int		type );
+	public boolean setStorageType(int type );
+	
+	/**
+	 * Variant of setStorageType, but this is intended to be used
+	 * as part of a batch operation - it won't save the download
+	 * manager state.
+	 * 
+	 * Note - the array that it is passed will be mutated.
+	 */
+	public boolean setStorageTypeNoAtomic(int type, String[] existing_storage_types);
 	
 	public int
 	getStorageType();
